-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 11.0.0-beta2
-
08546615f (master)
To reproduce:
- run any QML application
- stop the application in QML debugger
- open any file in editor
- add new watch expression
-> current file changes to where the application was stopped in
- resulted in
-
QTCREATORBUG-29874 Qml Debugger: Separate logic for locals retrieval and focusing a frame
-
- Reported
-
For Gerrit Dashboard: QTCREATORBUG-29329 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
517022,6 | Qml Debugger: Do not focus the current frame when adding a watch | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |