src/plugins/debugger/debuggerengine.h
@@ -214,6 +214,7 @@ public:
     }
 
     QString partialVariable;
+    bool qmlFocusOnFrame = true; // QTCREATORBUG-29874
 };
 
 class Location
